deploy/kube-app.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-nodejs
  labels:
    service: demo-nodejs
spec:
  replicas: 2
  template:
    metadata:
      annotations:
        forceRedeployUniqId: "N/A"
      labels:
        service: demo-nodejs
    spec:
      containers:
      - image: kosta709/cf-demo-nodejs:master
        name: demo-nodejs
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          protocol: TCP
